Correct mis-spelling of CTCLDecodeMess(s)age

--- a/main/diagnostics/status/Makefile.am
+++ b/main/diagnostics/status/Makefile.am
@@ -85,7 +85,7 @@ libTclStatusMessages_la_SOURCES= TclPackage.cpp             \
 	CTCLLogMessage.cpp CTCLLogMessage.h		    \
 	CTCLStateChangeMessage.cpp CTCLStateChangeMessage.h \
 	CTCLSubscriptions.cpp CTCLSubscriptions.h             \
-	CTCLDecodeMessage.cpp CTCLDecodeMesssage.h	\
+	CTCLDecodeMessage.cpp CTCLDecodeMessage.h	\
 	TclUtilities.cpp TclUtilities.h 
 
 libTclStatusMessages_la_CPPFLAGS=$(COMPILATION_FLAGS) @TCL_FLAGS@ @LIBTCLPLUS_CFLAGS@ @TCL_DEFS@
