Add a singleton class to ensure all users of zmq in a process can use the same zmq::context_t.  This is especially necessary for in the in-process multiaggregator thread as  inproc requires a shared context between all zmq::sockets that connect/bind to it.

--- a/main/diagnostics/status/Makefile.am
+++ b/main/diagnostics/status/Makefile.am
@@ -8,7 +8,7 @@ COMMON_LIBS      = @top_builddir@/base/os/libdaqshm.la  \
 	@top_builddir@/base/dataflow/libDataFlow.la	\
 	@ZMQ_LDFLAGS@ @LIBTCLPLUS_LDFLAGS@ @TCL_LDFLAGS@
 
-libStatusMessages_la_SOURCES=Constants.cpp \
+libStatusMessages_la_SOURCES=Constants.cpp CZmqContext.cpp \
 	CRingStatisticsMessage.cpp \
 	CReadoutStatistics.cpp \
 	CStatusDefinitions.cpp \
