--- a/main/diagnostics/status/Makefile.am
+++ b/main/diagnostics/status/Makefile.am
@@ -2,7 +2,9 @@ bin_PROGRAMS = ringstatusdaemon statusaggregator multiaggregator
 
 lib_LTLIBRARIES = libStatusMessages.la libTclStatusMessages.la libPyStatusMessages.la
 
-TCL_PACKAGES=LogModel.tcl LogView.tcl
+TCL_PACKAGES=LogModel.tcl LogView.tcl LogController.tcl LogDisplay.tcl
+
+
 
 COMPILATION_FLAGS= -I@top_srcdir@/base/os -I@top_srcdir@/base/dataflow \
 	-I@top_srcdir@/servers/portmanager \
