--- a/main/diagnostics/status/Makefile.am
+++ b/main/diagnostics/status/Makefile.am
@@ -151,7 +151,8 @@ TEST_PROGS=ringstattests tclpkgtests subtests ringpubclasstest ringdaemontests \
 noinst_PROGRAMS=$(TEST_PROGS) testringstatus
 
 dbtests_SOURCES=TestRunner.cpp Asserts.h statusdbSchema.cpp \
-	dblogtests.cpp dbringtests.cpp dbstatechangetests.cpp
+	dblogtests.cpp dbringtests.cpp dbstatechangetests.cpp \
+	dbrdostattests.cpp
 
 dbtests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@
 dbtests_LDFLAGS=libStatusMessages.la $(COMMON_LIBS) @CPPUNIT_LDFLAGS@
