--- a/main/daq/Makefile.am
+++ b/main/daq/Makefile.am
@@ -1,2 +1,2 @@
-SUBDIRS = format  s800callouts readoutgui eventbuilder evbtools actions
+SUBDIRS = format nscldaq-format s800callouts readoutgui eventbuilder evbtools actions
 
