--- a/main/utilities/conversion/Makefile.am
+++ b/main/utilities/conversion/Makefile.am
@@ -31,20 +31,20 @@ include_HEADERS = CTransformMediator.h \
 #                           CTransform11p0to11p0.h
 
 libConversion_la_CXXFLAGS = -I@srcdir@ \
-                            -I@top_srcdir@/utilities/format \
+                            -I@top_srcdir@/utilities/nscldaq-format/format \
                             -I@top_srcdir@/utilities/filter \
                             -I@top_srcdir@/utilities/IO \
-                            -I@top_srcdir@/utilities/FormattedIO \
-                            -I@top_srcdir@/utilities/Buffer \
+                            -I@top_srcdir@/utilities/nscldaq-format/FormattedIO \
+                            -I@top_srcdir@/utilities/nscldaq-format/Buffer \
                             -I@top_srcdir@/base/headers \
                             @LIBTCLPLUS_CFLAGS@
 
-libConversion_la_LIBADD = @top_builddir@/utilities/format/V8/libdataformatv8.la \
-			  @top_builddir@/utilities/format/V10/libdataformatv10.la \
-			  @top_builddir@/utilities/format/V11/libdataformatv11.la \
+libConversion_la_LIBADD = @top_builddir@/utilities/nscldaq-format/format/V8/libdataformatv8.la \
+			  @top_builddir@/utilities/nscldaq-format/format/V10/libdataformatv10.la \
+			  @top_builddir@/utilities/nscldaq-format/format/V11/libdataformatv11.la \
 			  @top_builddir@/utilities/filter/libfilter.la \
 			  @top_builddir@/utilities/IO/libdaqio.la \
-			  @top_builddir@/utilities/FormattedIO/libdaqformatio.la \
+			  @top_builddir@/utilities/nscldaq-format/FormattedIO/libdaqformatio.la \
 			  @LIBTCLPLUS_LDFLAGS@
 
 
@@ -60,22 +60,22 @@ unittests_SOURCES = TestRunner.cpp \
 
 unittests_LDADD	= -L$(libdir) $(CPPUNIT_LDFLAGS) 		\
                    @builddir@/libConversion.la	\
-                   @top_builddir@/utilities/Buffer/libbuffer.la	\
-		   @top_builddir@/utilities/format/V8/libdataformatv8.la	\
-		   @top_builddir@/utilities/format/V10/libdataformatv10.la	\
-		   @top_builddir@/utilities/format/V11/libdataformatv11.la	\
+                   @top_builddir@/utilities/nscldaq-format/Buffer/libbuffer.la	\
+		   @top_builddir@/utilities/nscldaq-format/format/V8/libdataformatv8.la	\
+		   @top_builddir@/utilities/nscldaq-format/format/V10/libdataformatv10.la	\
+		   @top_builddir@/utilities/nscldaq-format/format/V11/libdataformatv11.la	\
                    @top_builddir@/utilities/IO/libdaqio.la	\
-                   @top_builddir@/utilities/FormattedIO/libdaqformatio.la	\
+                   @top_builddir@/utilities/nscldaq-format/FormattedIO/libdaqformatio.la	\
                    @top_builddir@/utilities/filter/libfilter.la	\
-                   @top_builddir@/utilities/Buffer/libbuffer.la	\
+                   @top_builddir@/utilities/nscldaq-format/Buffer/libbuffer.la	\
                    @LIBEXCEPTION_LDFLAGS@
 
 unittests_CPPFLAGS= -I@srcdir@ \
-                    -I@top_srcdir@/utilities/Buffer \
+                    -I@top_srcdir@/utilities/nscldaq-format/Buffer \
                     -I@top_srcdir@/utilities/filter \
                     -I@top_srcdir@/utilities/IO \
-                    -I@top_srcdir@/utilities/FormattedIO \
-                    -I@top_srcdir@/utilities/format \
+                    -I@top_srcdir@/utilities/nscldaq-format/FormattedIO \
+                    -I@top_srcdir@/utilities/nscldaq-format/format \
                     -I@top_srcdir@/base/headers \
                     @CPPUNIT_CFLAGS@ \
                     @LIBTCLPLUS_CFLAGS@ \
@@ -102,21 +102,22 @@ format_converter_SOURCES = Main.h Main.cpp
 nodist_format_converter_SOURCES = format_converter_options.c format_converter_options.h
 
 format_converter_LDADD = @builddir@/libConversion.la \
-                @top_builddir@/utilities/Buffer/libbuffer.la \
-	       @top_builddir@/utilities/format/V8/libdataformatv8.la \
-	       @top_builddir@/utilities/format/V10/libdataformatv10.la \
-	       @top_builddir@/utilities/format/V11/libdataformatv11.la \
+                @top_builddir@/utilities/nscldaq-format/Buffer/libbuffer.la \
+	       @top_builddir@/utilities/nscldaq-format/format/V8/libdataformatv8.la \
+	       @top_builddir@/utilities/nscldaq-format/format/V10/libdataformatv10.la \
+	       @top_builddir@/utilities/nscldaq-format/format/V11/libdataformatv11.la \
 	       @top_builddir@/utilities/filter/libfilter.la \
 	       @top_builddir@/utilities/IO/libdaqio.la \
-	       @top_builddir@/utilities/FormattedIO/libdaqformatio.la
+	       @top_builddir@/utilities/nscldaq-format/FormattedIO/libdaqformatio.la
 
 format_converter_CPPFLAGS = -I@srcdir@ \
-                    -I@top_srcdir@/utilities/Buffer \
+                    -I@top_srcdir@/utilities/nscldaq-format/Buffer \
 		    -I@top_srcdir@/utilities/filter \
 		    -I@top_srcdir@/utilities/IO \
-		    -I@top_srcdir@/utilities/FormattedIO \
-		    -I@top_srcdir@/utilities/format \
-		    -I@top_srcdir@/base/headers
+		    -I@top_srcdir@/utilities/nscldaq-format/FormattedIO \
+		    -I@top_srcdir@/utilities/nscldaq-format/format \
+		    -I@top_srcdir@/base/headers \
+				$(AM_CPPFLAGS)
 
 EXTRA_DIST = format_converter_options.ggo \
 	 convert_format.py
