Removes comment in teering_SOURCES

--- a/main/daq/evbtools/teering/Makefile.am
+++ b/main/daq/evbtools/teering/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = teering
 
-teering_SOURCES = teering.cpp @srcdir@/tcmdline.c # @top_srcdir@/daq/eventbuilder/fragment.c
+teering_SOURCES = teering.cpp @srcdir@/tcmdline.c
 
 BUILT_SOURCES=@srcdir@/tcmdline.c
 
