Updates eventlog to use V12, bump nscldaq-format

--- a/main/utilities/eventlog/Makefile.am
+++ b/main/utilities/eventlog/Makefile.am
@@ -13,12 +13,18 @@ eventlog_DEPENDENCIES	=	eventlogargs.o
 
 eventlog_CPPFLAGS       =	-I@top_srcdir@/base/headers		\
 				@LIBTCLPLUS_CFLAGS@			\
-				-I@top_srcdir@/daq/format		\
-			        -I@top_srcdir@/base/dataflow	\
+                                -I@top_srcdir@/utilities/nscldaq-format/format		\
+                                -I@top_srcdir@/utilities/nscldaq-format/FormattedIO \
+                                -I@top_srcdir@/utilities/nscldaq-format/Buffer \
+                                -I@top_srcdir@/base/dataflow	\
+                                -I@top_srcdir@/utilities/IO \
 				-I@top_srcdir@/base/os		\
 				@OPENSSL_INCLUDES@
 
-eventlog_LDADD		=	@top_builddir@/daq/format/libdataformat.la	\
+eventlog_LDADD		=	@top_builddir@/utilities/nscldaq-format/format/V12/libdataformatv12.la	\
+                                @top_builddir@/utilities/nscldaq-format/FormattedIO/libdaqformatio.la \
+                                @top_builddir@/utilities/nscldaq-format/Buffer/libbuffer.la \
+                                @top_builddir@/utilities/IO/libdaqio.la \
 				@top_builddir@/base/dataflow/libDataFlow.la	\
 				@LIBEXCEPTION_LDFLAGS@			\
 				@top_builddir@/base/os/libdaqshm.la		\
@@ -53,13 +59,19 @@ noinst_PROGRAMS		=	fakeruns eventlogTests
 
 fakeruns_SOURCES	= 	fakeruns.cpp
 
-fakeruns_LDADD		=	@top_builddir@/daq/format/libdataformat.la	\
+fakeruns_LDADD		=	@top_builddir@/utilities/nscldaq-format/format/V12/libdataformatv12.la	\
+                                @top_builddir@/utilities/nscldaq-format/Buffer/libbuffer.la	\
+                                @top_builddir@/utilities/nscldaq-format/FormattedIO/libdaqformatio.la	\
+                                @top_builddir@/utilities/IO/libdaqio.la	\
 				@top_builddir@/base/dataflow/libDataFlow.la	\
 				@top_builddir@/base/os/libdaqshm.la              \
 				@LIBEXCEPTION_LDFLAGS@
 fakeruns_CPPFLAGS=-I@top_srcdir@/base/headers		\
 				@LIBTCLPLUS_CFLAGS@			\
-				-I@top_srcdir@/daq/format		\
+                                -I@top_srcdir@/utilities/nscldaq-format/format		\
+                                -I@top_srcdir@/utilities/nscldaq-format/Buffer		\
+                                -I@top_srcdir@/utilities/nscldaq-format/V12		\
+                                -I@top_srcdir@/utilities/IO		\
 			        -I@top_srcdir@/base/dataflow	\
 				-I@top_srcdir@/base/os		\
 				@OPENSSL_INCLUDES@
@@ -67,14 +79,20 @@ fakeruns_CPPFLAGS=-I@top_srcdir@/base/headers		\
 eventlogTests_SOURCES = TestRunner.cpp eventlogTests.cpp
 eventlogTests_CPPFLAGS=@CPPUNIT_CFLAGS@ -I@top_srcdir@/base/headers		\
 				@LIBTCLPLUS_CFLAGS@			\
-				-I@top_srcdir@/daq/format		\
+                                -I@top_srcdir@/utilities/nscldaq-format/format		\
+                                -I@top_srcdir@/utilities/nscldaq-format/Buffer		\
+                                -I@top_srcdir@/utilities/nscldaq-format/V12		\
+                                -I@top_srcdir@/utilities/IO		\
 			        -I@top_srcdir@/base/dataflow	\
 				-I@top_srcdir@/base/os		\
 				@OPENSSL_INCLUDES@
 
 eventlogTests_LDADD   = @CPPUNIT_LDFLAGS@ \
-				@top_builddir@/daq/format/libdataformat.la	\
-				@top_builddir@/base/dataflow/libDataFlow.la	\
+                                @top_builddir@/utilities/nscldaq-format/format/V12/libdataformatv12.la	\
+                                @top_builddir@/utilities/nscldaq-format/Buffer/libbuffer.la	\
+                                @top_builddir@/utilities/nscldaq-format/FormattedIO/libdaqformatio.la	\
+                                @top_builddir@/utilities/IO/libdaqio.la	\
+                                @top_builddir@/base/dataflow/libDataFlow.la	\
 				@LIBEXCEPTION_LDFLAGS@			\
 				@top_builddir@/base/os/libdaqshm.la		\
 				$(THREADLD_FLAGS)
