--- a/main/utilities/ringselector/Makefile.am
+++ b/main/utilities/ringselector/Makefile.am
@@ -16,16 +16,22 @@ BUILT_SOURCES	= parser.h parser.c
 ringselector_CPPFLAGS		= 	@LIBTCLPLUS_CFLAGS@	\
 				-I@top_srcdir@/utilities/common	\
 				-I@top_srcdir@/base/headers	\
-				-I@top_srcdir@/daq/format	\
 			        -I@top_srcdir@/base/dataflow \
 				-I@top_srcdir@/base/os	\
-				-I@top_srcdir@/base/thread
+                                -I@top_srcdir@/base/thread \
+                                -I@top_srcdir@/utilities/IO	\
+                                -I@top_srcdir@/utilities/nscldaq-format/format	\
+                                -I@top_srcdir@/utilities/nscldaq-format/Buffer	\
+                                -I@top_srcdir@/utilities/nscldaq-format/FormattedIO
 
 
 ringselector_LDADD	=	@top_builddir@/utilities/common/libUtilCommon.la \
-				@top_builddir@/daq/format/libdataformat.la	\
-				@top_builddir@/base/dataflow/libDataFlow.la	\
-				@top_builddir@/base/os/libdaqshm.la		\
+                                @top_builddir@/utilities/nscldaq-format/format/V12/libdataformatv12.la	\
+                                @top_builddir@/utilities/nscldaq-format/Buffer/libbuffer.la	\
+                                @top_builddir@/utilities/nscldaq-format/FormattedIO/libdaqformatio.la	\
+                                @top_builddir@/utilities/IO/libdaqio.la	\
+                                @top_builddir@/base/dataflow/libDataFlow.la	\
+                                @top_builddir@/base/os/libdaqshm.la		\
 				@top_builddir@/base/thread/libdaqthreads.la     \
 				@LIBEXCEPTION_LDFLAGS@				\
 				$(THREADLD_FLAGS) 
