Modifies build order for Buffer package

--- a/main/utilities/Makefile.am
+++ b/main/utilities/Makefile.am
@@ -4,6 +4,7 @@ SUBDIRS = 				common \
 					daqstart \
 					dvdburn \
 					sequencer \
+					nscldaq-format/Buffer \
                                         IO \
 																				nscldaq-format \
 					filter \
